--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img class="first-slide" src="https://picsum.photos/1200/300?image=1008" alt="First slide">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Example headline.</h1>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img class="second-slide" src="https://picsum.photos/1200/300?image=18" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img class="third-slide" src="https://picsum.photos/1200/300?image=78" alt="Third slide">
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>One more for good measure.</h1>
